Forgot password functionality Frontend

--- a/EMS-Frontend/src/app/components/user/forgot-password/forgot-password.component.html
+++ b/EMS-Frontend/src/app/components/user/forgot-password/forgot-password.component.html
@@ -19,6 +19,15 @@
                 <mat-label>OTP</mat-label>
                 <input matInput type="password" placeholder="Password" formControlName="otp" />
             </mat-form-field>
+            @if(currentStep === ForgotPasswordSteps.VERIFY_OTP){
+                <div class="actions">
+                    <a mat-button [disabled]="resendOtpDisabled" (click)="resendOtp()" >Resend OTP 
+                        @if(resendOtpDisabled){
+                            <span>({{countDown}} s)</span>
+                        }
+                    </a>
+                </div>
+            }
             @if(currentStep === ForgotPasswordSteps.RESET_PASSWORD) {
                 <mat-form-field appearance="outline">
                     <mat-icon matSuffix>password</mat-icon>
