all changes commit.

--- a/EMS-Frontend/src/app/app.component.html
+++ b/EMS-Frontend/src/app/app.component.html
@@ -1,1 +1,5 @@
+<!-- @if(loaderService.pendingRequestsCount > 0){ -->
+    <!-- <mat-progress-bar style="color: red;" mode="indeterminate"></mat-progress-bar> -->
+<!-- } -->
+<ngx-spinner><p style="color: white" > Loading... </p></ngx-spinner>
 <router-outlet></router-outlet>
