--- a/EMS-Frontend/src/app/components/user/login/login.component.html
+++ b/EMS-Frontend/src/app/components/user/login/login.component.html
@@ -1,4 +1,4 @@
-<div style="padding: 20px; background-color: #3f51b5; height: 100%">
+<div style="padding: 20px; background-color: #3f51b5; height: -webkit-fill-available;">
     <mat-card
       style="display: flex; flex-direction: column; margin: 100px auto; max-width: 500px; padding: 12px;"
     >
