--- a/EMS-Frontend/src/app/components/pages/configuration/configuration.component.html
+++ b/EMS-Frontend/src/app/components/pages/configuration/configuration.component.html
@@ -1,2 +1,2 @@
-<button mat-flat-button (click)="openDialog()">Add Dropdown</button>
+<button class="btn" mat-flat-button (click)="openDialog()">Add Dropdown</button>
 
