Frontend: add & get all dropdown APIs integration completed.

--- a/EMS-Frontend/src/app/components/pages/add-configuration/add-configuration.component.html
+++ b/EMS-Frontend/src/app/components/pages/add-configuration/add-configuration.component.html
@@ -11,7 +11,7 @@
       <div class="row-1">
         <mat-form-field>
           <mat-label>Dropdown Name</mat-label>
-          <input matInput formControlName="dorpdownName" />
+          <input matInput formControlName="dropdownName" />
         </mat-form-field>
         
         <mat-form-field>
