--- a/EMS-Frontend/src/app/components/pages/configuration/configuration.component.html
+++ b/EMS-Frontend/src/app/components/pages/configuration/configuration.component.html
@@ -1,2 +1,3 @@
 <button class="btn" mat-flat-button (click)="openDialog()">Add Dropdown</button>
 
+<!-- Data table with sorting, pagination, and filtering will be shown below. -->
