--- a/EMS-Frontend/src/app/components/pages/configuration/configuration.component.html
+++ b/EMS-Frontend/src/app/components/pages/configuration/configuration.component.html
@@ -1,3 +1,68 @@
-<button class="btn" mat-flat-button (click)="openDialog()">Add Dropdown</button>
+<div class="wrapper">
+    <div class="row">
+        <button class="btn" mat-flat-button (click)="openDialog()">Add Dropdown</button>
+    </div>
+    
+    <div class="row">
+        <!-- Data table with sorting, pagination, and filtering will be shown below. -->
+        <mat-form-field>
+          <mat-label>Filter</mat-label>
+          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Mia" #input>
+        </mat-form-field>
+        
+        <div class="mat-elevation-z8">
+          <table mat-table [dataSource]="dataSource" matSort>
+        
+            <!-- ID Column -->
+            <ng-container matColumnDef="id">
+              <th mat-header-cell *matHeaderCellDef > Sr. No. </th>
+              <td mat-cell *matCellDef="let row; let i = index"> {{ (paginator.pageIndex * paginator.pageSize) + i + 1 }} </td>
+            </ng-container>
+        
+            <!-- Dropdown Name Column -->
+            <ng-container matColumnDef="dropdownName">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Dropdown Name </th>
+              <td mat-cell *matCellDef="let row"> {{row.dropdownName}} </td>
+            </ng-container>
+        
+            <!-- Dropdown Values Column -->
+            <ng-container matColumnDef="dropdownValues">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header class="dsc-cell"> Dropdown Values </th>
+              <td mat-cell *matCellDef="let row" class="dsc-cell"> {{row.dropdownValues}}</td>
+            </ng-container>
+        
+            <!-- Description Column -->
+            <ng-container matColumnDef="description">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Description </th>
+              <td mat-cell *matCellDef="let row"> {{row.description}} </td>
+            </ng-container>
+        
+            <!-- Creation Date Column -->
+            <ng-container matColumnDef="createdAt">
+              <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
+              <td mat-cell *matCellDef="let row"> {{row.createdAt | date: 'medium'}} </td>
+            </ng-container>
+        
+            <!-- No Date Column -->
+            <ng-container>
+                <tr class="mat-row" *matNoDataRow>
+                    <td class="mat-cell"  [attr.colspan]="displayedColumns.length" style="text-align: center;">
+                      <strong>No records found</strong>
+                    </td>
+                  </tr>
+            </ng-container>
 
-<!-- Data table with sorting, pagination, and filtering will be shown below. -->
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        
+            <!-- Row shown when there is no matching data. -->
+            <!-- <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="5">No data matching the filter "{{input.value}}"</td>
+            </tr> -->
+          </table>
+        
+          <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page of users"></mat-paginator>
+        </div>
+    </div>
+</div>
+
