--- a/EMS-Frontend/src/app/components/pages/configuration/configuration.component.scss
+++ b/EMS-Frontend/src/app/components/pages/configuration/configuration.component.scss
@@ -2,5 +2,29 @@
     border-radius: 5px;
     height: 52px;
     background-color: #3f51b5;
-    margin: 20px;
+}
+
+table {
+  width: 100%;
+}
+
+.mat-mdc-form-field {
+  font-size: 14px;
+  width: 100%;
+}
+
+// td, th {
+//   width: 25%;
+// }
+
+.dsc-cell {
+      width: 30%;
+}
+
+.wrapper {
+padding: 20px;
+}
+
+.row {
+    margin-bottom: 15px;
 }
