--- a/EMS-Frontend/src/app/components/pages/configuration/configuration.component.html
+++ b/EMS-Frontend/src/app/components/pages/configuration/configuration.component.html
@@ -40,7 +40,22 @@
             <!-- Creation Date Column -->
             <ng-container matColumnDef="createdAt">
               <th mat-header-cell *matHeaderCellDef mat-sort-header> Creation Date </th>
-              <td mat-cell *matCellDef="let row"> {{row.createdAt | date: 'medium'}} </td>
+              <td mat-cell *matCellDef="let row">
+                <div class="action-cell">
+                  <div class="text">
+                    {{row.createdAt | date: 'medium'}}
+                  </div>
+                  <div class="button">
+                    <button mat-icon-button (click)="editDropdown()" class="edit">
+                      <mat-icon>edit</mat-icon>
+                    </button>
+                    <button mat-icon-button (click)="deleteDropdown()" class="delete">
+                      <mat-icon>delete</mat-icon>
+                    </button>
+                  </div>
+                </div>
+                
+              </td>
             </ng-container>
         
             <!-- No Date Column -->
