Frontend: edit & delete dropdown functionality done.

--- a/EMS-Frontend/src/app/components/pages/add-configuration/add-configuration.component.html
+++ b/EMS-Frontend/src/app/components/pages/add-configuration/add-configuration.component.html
@@ -38,5 +38,5 @@
 </mat-dialog-content>
 <mat-dialog-actions align="center">
   <!-- <button mat-button>No Thanks</button> -->
-  <button class="btn" mat-flat-button cdkFocusInitial (click)="SubmitData()">Submit </button>
+  <button class="btn" mat-flat-button cdkFocusInitial (click)="submitData()">{{data.data ? 'Update' : 'Submit'}} </button>
 </mat-dialog-actions>
